# station-guided-eo-evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
aggregate_manifests/: synthetic_diagnostics.csv  synthetic_manifest.json  synthetic_metrics.csv  synthetic_station_year_predictions.csv
configs/: protocol_defaults.json
docs/: DATA_PREPARATION.md
examples/synthetic_toy_dataset/: record_predictions_validated.csv  station_year_labels.csv
examples/synthetic_toy_dataset/splits/: protocol_random_record_seed42.csv  protocol_station_isolated_seed42.csv  protocol_station_year_seed42.csv  protocol_temporal_holdout_2021.csv  split_manifest.csv
paper_assets/: INPUT_SCHEMA.md  README.md
paper_assets/scripts/: build_sigspatial_tables.R  plot_sigspatial_figures.R
schemas/: metadata_schema.md  record_predictions_schema.json
scripts/: aggregate_station_year_predictions.py  build_aggregate_manifest.py  build_diagnostics.py  build_figures.py  build_protocol_splits.py  compute_metrics.py  generate_synthetic_dataset.py  preprocess_samples.py  release_safety_audit.py  run_synthetic_demo.py
tests/: test_protocol_workflow.py
