[project]
name = "station-guided-eo-evaluation"
version = "0.1.0"
description = "Support-aware evaluation workflow for station-guided Earth observation."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
